// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test loader for different sizes should render loader of size 20 when size={20} is passed in prop 1`] = `
<div
  className="loader loader_20"
>
  <div
    className="box"
  />
  <div
    className="box"
  />
  <div
    className="box"
  />
  <div
    className="box"
  />
  <div
    className="box"
  />
</div>
`;

exports[`test loader for different sizes should render loader of size 30 when size={30} is passed in prop 1`] = `
<div
  className="loader loader_30"
>
  <div
    className="box"
  />
  <div
    className="box"
  />
  <div
    className="box"
  />
  <div
    className="box"
  />
  <div
    className="box"
  />
</div>
`;
